syntax = "proto3";

package github.com.classydevv.fulfillment.providers;

option go_package = "github.com/classydevv/fulfillment/pkg/api/providers";

message Provider {
    string provider_id = 1 [json_name = "provider_id"];
    string name = 2 [json_name = "name"];
}

message ProviderCreateRequest {
    string provider_id = 1 [json_name = "provider_id"];
    string name = 2 [json_name = "name"];
}

message ProviderCreateResponse {
    string provider_id = 1 [json_name = "provider_id"];
}

message ProviderListAllRequest {}

message ProviderListAllResponse {
    repeated Provider providers = 1 [json_name = "providers"];
}

message ProviderUpdateRequest {
    string provider_id = 1 [json_name = "provider_id"];
    string name = 2 [json_name = "name"];
}

message ProviderUpdateResponse {
    Provider provider = 1 [json_name = "provider"];
}

message ProviderDeleteRequest {
    string provider_id = 1 [json_name = "provider_id"];
}

message ProviderDeleteResponse {}